// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds \`dataTest\` prop 1`] = `
<ForwardRef
  dataTest="Duck"
  to="https://example.com/"
>
  <ForwardRef
    dataTest="Duck"
    isDisabled={false}
    shouldOpenInNewTab={false}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      data-test="Duck"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds \`dataTest\` prop 2`] = `
<ForwardRef
  dataTest="Duck"
  to="#"
>
  <ForwardRef
    dataTest="Duck"
    isDisabled={false}
    shouldOpenInNewTab={false}
    size="large"
    theme="primary"
    to="#"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      data-test="Duck"
      disabled={false}
      href="#"
      target="_self"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds \`rel\` attribute to handle security vulnerability for \`shouldOpenInNewTab\` 1`] = `
<ForwardRef
  shouldOpenInNewTab={true}
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={true}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds \`rel\` attribute to handle security vulnerability for \`shouldOpenInNewTab\` 2`] = `
<ForwardRef
  shouldOpenInNewTab={true}
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={true}
    size="large"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds \`rel\` attribute to handle security vulnerability for \`target=_blank\` 1`] = `
<ForwardRef
  target="_blank"
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={false}
    target="_blank"
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds \`rel\` attribute to handle security vulnerability for \`target=_blank\` 2`] = `
<ForwardRef
  target="_blank"
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={false}
    size="large"
    target="_blank"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds attribute to open link in new tab 1`] = `
<ForwardRef
  shouldOpenInNewTab={true}
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={true}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds attribute to open link in new tab 2`] = `
<ForwardRef
  shouldOpenInNewTab={true}
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={true}
    size="large"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`prefers \`target\` attribute to \`shouldOpenInNewTab\` when both are provided 1`] = `
<ForwardRef
  shouldOpenInNewTab={true}
  target="foo"
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={true}
    target="foo"
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      rel="noopener noreferrer"
      target="foo"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`prefers \`target\` attribute to \`shouldOpenInNewTab\` when both are provided 2`] = `
<ForwardRef
  shouldOpenInNewTab={true}
  target="foo"
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={true}
    size="large"
    target="foo"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      rel="noopener noreferrer"
      target="foo"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`removes \`href\` if link is disabled 1`] = `
<ForwardRef
  isDisabled={true}
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={true}
    shouldOpenInNewTab={false}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={true}
      target="_self"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`removes \`href\` if link is disabled 2`] = `
<ForwardRef
  isDisabled={true}
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={true}
    shouldOpenInNewTab={false}
    size="large"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={true}
      target="_self"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders \`children\` passed in 1`] = `
<ForwardRef
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={false}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders \`children\` passed in 2`] = `
<ForwardRef
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={false}
    size="large"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders \`to\` prop as \`href\` 1`] = `
<ForwardRef
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={false}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders \`to\` prop as \`href\` 2`] = `
<ForwardRef
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={false}
    size="large"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders a anchor tag when a \`to\` is provided 1`] = `
<ForwardRef
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={false}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders a anchor tag when a \`to\` is provided 2`] = `
<ForwardRef
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={false}
    size="large"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`sets \`target\` attribute 1`] = `
<ForwardRef
  target="foo"
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={false}
    target="foo"
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      target="foo"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`sets \`target\` attribute 2`] = `
<ForwardRef
  target="foo"
  to="https://example.com/"
>
  <ForwardRef
    isDisabled={false}
    shouldOpenInNewTab={false}
    size="large"
    target="foo"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      target="foo"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;
